# Thunderbot_Software

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  test_build.cpp
docs/: coroutine_test_examples.cpp
environment_setup/: readme.txt  setup_software.sh  ubuntu22_requirements.txt  util.sh
src/: .bazelrc  BUILD  WORKSPACE  requirements.in  requirements.txt  tbots.py  test_build.cpp  testing.txt
src/cc_toolchain/: BUILD  cc_toolchain_config.bzl
src/extlibs/: g3log.BUILD  g3sinks.BUILD  nanopb.BUILD
src/extlibs/er_force_sim/src/protobuf/: BUILD
src/patches/: com_google_protobuf.patch
src/proto/: BUILD  CMakeLists.txt  ball.proto  game_state.proto  geometry.proto  parameters.proto  power_frame_msg.proto  primitive.proto  robot_crash_msg.proto  robot_log_msg.proto  robot_status_msg.proto  sensor_msg.proto  ssl_autoref_ci.proto  ssl_gc_api.proto  ssl_gc_change.proto  ssl_gc_ci.proto  ssl_gc_engine.proto  ssl_gc_game_event.proto  ssl_gc_referee_message.proto  ssl_gc_state.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto  ssl_vision_detection_tracked.proto  ssl_vision_wrapper.proto  ssl_vision_wrapper_tracked.proto  tactic.proto  tbots_software_msgs.proto  team.proto  test_build.cpp  validation.proto  vision.proto  visualization.proto  world.proto
src/proto/message_translation/: BUILD  tbots_geometry.cpp  tbots_geometry.h  tbots_protobuf.cpp  tbots_protobuf.h
src/python_toolchain/: BUILD  README.md
src/shared/test_util/: BUILD  tbots_gtest_main.cpp
src/software/: BUILD  er_force_simulator_main.cpp  python_bindings.cpp  tester.cpp  unix_full_system_main.cpp
src/software/ai/: BUILD  ai.cpp  threaded_ai.cpp
src/software/ai/evaluation/: find_open_areas.cpp  find_open_areas.h  keep_away.cpp
src/software/ai/navigator/obstacle/: geom_obstacle.hpp  obstacle.cpp  obstacle.hpp  obstacle_visitor.h  robot_navigation_obstacle_factory.cpp  (+1 more)
src/software/ai/passing/: cost_function.cpp  cost_function.h  eighteen_zone_pitch_division.cpp  eighteen_zone_pitch_division.h  field_pitch_division.h
src/software/embedded/: primitive_executor.cpp  thunderloop.cpp
src/software/estop/: arduino_util.cpp  threaded_estop_reader.cpp  threaded_estop_reader.h
src/software/field_tests/: BUILD
src/software/geom/: angle.h  circle.cpp  convex_polygon.cpp  convex_polygon.h  point.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  stadium.cpp  stadium.h  vector.h
src/software/geom/algorithms/: axis_aligned_bounding_box.cpp  axis_aligned_bounding_box.h  closest_point.cpp  closest_point.h  contains.cpp  contains.h  distance.cpp  distance.h  end_in_obstacle_sample.cpp  end_in_obstacle_sample.h  find_open_circles.cpp  find_open_circles.h  furthest_point.cpp  furthest_point.h  intersection.cpp  intersection.h  intersects.cpp  intersects.h  rasterize.cpp  rasterize.h  signed_distance.cpp  signed_distance.h  step_along_perimeter.cpp  step_along_perimeter.h  voronoi_diagram.cpp  voronoi_diagram.h
src/software/jetson_nano/: BUILD  thunderloop.cpp
src/software/jetson_nano/redis/: BUILD
src/software/jetson_nano/services/: BUILD  robot_auto_test.cpp
src/software/logger/: BUILD  csv_sink.cpp  debug_ram.cpp  log_merger.cpp  log_merger.h  logger.cpp  logger.h  logger_singleton.h  plotjuggler_sink.cpp  proto_logger.cpp  protobuf_sink.cpp  protobuf_sink.h
src/software/math/: math_functions.cpp  math_functions.h
src/software/multithreading/: BUILD  thread_safe_buffer.hpp
src/software/networking/: threaded_unix_listener.py
src/software/networking/udp/: BUILD  proto_udp_listener.hpp  udp_network_test_python.py
src/software/networking/unix/: proto_unix_listener.hpp
src/software/sensor_fusion/filter/: ball_filter.cpp  ball_filter.h
src/software/simulated_tests/: BUILD  simulated_er_force_sim_test_fixture.cpp  simulated_test_fixture.py
src/software/thunderscope/: BUILD  constants.py  dock_style.py  proto_unix_io.py  robot_communication.py  robot_diagnostics_main.py  thread_safe_buffer.py  thunderscope.py  thunderscope_config.py  thunderscope_main.py  thunderscope_types.py  widget_setup_functions.py
src/software/thunderscope/binary_context_managers/: BUILD  simulator.py
src/software/thunderscope/common/: BUILD  common_widgets.py  fps_widget.py  frametime_counter.py  proto_configuration_widget.py  proto_plotter.py
src/software/thunderscope/gl/: BUILD  gl_widget.py
src/software/thunderscope/log/: BUILD  g3log_widget.py
src/software/thunderscope/play/: BUILD  playinfo_widget.py  refereeinfo_widget.py
src/software/thunderscope/replay/: BUILD  proto_logger.py  proto_player.py  recover_zip.py
src/software/thunderscope/robot_diagnostics/: BUILD  chicker_widget.py  error_log_widgets.py  estop_view.py  motor_fault_view.py  robot_error_log.py  robot_info.py  ssh_widget.py
src/software/uart/: boost_uart_communication.cpp  boost_uart_communication.h  uart_communication.h
src/software/util/generic_factory/: generic_factory.h
src/software/util/make_enum/: make_enum.hpp
src/software/util/sml_fsm/: sml_fsm.h
src/software/util/typename/: typename.cpp  typename.h
src/software/world/: field.cpp  field.h  robot.cpp  robot.h
src/test_cygwin/: CMakeLists.txt  compile_commands.json  main.cpp  main.py
(+60 files in other folders)
